fixed text-align h4 in "details"

--- a/css/style.scss
+++ b/css/style.scss
@@ -304,6 +304,7 @@ body {
     color: #464646;
     margin-bottom: 40px;
     letter-spacing: 1px;
+    text-align: left;
   }
   .p-16 {
     font-size: 16px;
